Done with simple.htnl updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright 2014 Git.Training
 -->
 <head>
-	<title>Lots of Trable, in little repo</title>
+	<title>Updating Title for Staxh Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,8 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now
-			Not sure if we should replace this or not
+			Adding morre important content here
 		</p>
 	</main>
 	<footer class="container">
