Changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright 2014 Git.Training
 -->
 <head>
-	<title>Updating Title for Staxh Example</title>
+	<title>Updating Title for Staxh Branch Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
